force-app/main/default/objects/myTestObject1__c/myTestObject1__c.object-meta.xml
<CustomObject>
    <description>myTestObject1</description>
    <label>myTestObject1</label>
    <nameField>
        <label>myTestObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>myTestObject1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>