force-app/main/default/objects/myTestObject1__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <inlineHelpText>Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>myTestObject1s</relationshipLabel>
    <relationshipName>myTestObject1s</relationshipName>
    <type>Lookup</type>
</CustomField>