force-app/main/default/objects/myTestObject1__c/fields/Is_Auto_Part__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Auto Part</description>
    <inlineHelpText>Is Auto Part</inlineHelpText>
    <label>Is Auto Part</label>
    <type>Checkbox</type>
</CustomField>