force-app/main/default/objects/myTestObject1__c/fields/Product_Series_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Series_Number__c</fullName>
    <description>Product Series Number</description>
    <displayFormat>P-{0000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Product Series Number</inlineHelpText>
    <label>Product Series Number</label>
    <type>AutoNumber</type>
</CustomField>